--- a/src/main/java/com/marcusoliver/loan/tracker/InterestTrack.form
+++ b/src/main/java/com/marcusoliver/loan/tracker/InterestTrack.form
@@ -74,9 +74,9 @@
                       <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lbl_trackInt" min="-2" pref="320" max="-2" attributes="0"/>
-                          <Component id="btn_back" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jScrollPane1" alignment="0" min="-2" pref="934" max="-2" attributes="0"/>
+                          <Component id="btn_back" alignment="0" min="-2" pref="97" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="37" max="32767" attributes="0"/>
                   </Group>
